--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -53,6 +53,7 @@
     transform: translateY(-4px);
     white-space: nowrap;
     font-weight: bold;
+    width: 180px;
 }
 
 /* PRIMARY FRONT COLORS */
@@ -66,6 +67,7 @@
 
 .front.yellow {
     background: #FDAB3D;
+    color: #303134;
 }
 
 .front.green {
