--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -66,6 +66,10 @@
     padding: 7px 10px;
 }
 
+.front.extended {
+    width: 340px;
+}
+
 /* PRIMARY FRONT COLORS */
 .front.purple {
     background: #A25DDC;
