--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -6,13 +6,8 @@
     cursor: pointer;
 }
 
-.pushable.oauth:last-child {
-    margin-right: 8px;
-}
-
-
-.pushable.oauth{
-    margin-left: 8px;
+.pushable.extended {
+    width: 100%;
 }
 
 .shadow {
@@ -56,8 +51,8 @@
     background: #c6cfd2;
 }
 
-.edge.darkGray {
-    background: #141414;
+.edge.white {
+    background: #9AA0A6;
 }
 
 .front {
@@ -80,14 +75,7 @@
 }
 
 .front.extended {
-    width: 340px;
-}
-
-.front.oauth {
-    font-weight: normal;
-    font-size: 0.90rem;
-    height: 36px;
-    width: 110px;
+    width: 100%;
 }
 
 /* PRIMARY FRONT COLORS */
@@ -113,9 +101,9 @@
     color: #9AA0A6;
 }
 
-.front.darkGray {
-    background: #303134;
-    color: #E8EAED;
+.front.white {
+    background: #E8EAED;
+    color: #696969;
 }
 
 /* SECONDARY FRONT COLORS */
