--- a/src/App.css
+++ b/src/App.css
@@ -1,66 +1,104 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap');
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 
-* {
-  font-family: 'Roboto', sans-serif;
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
 }
 
-:root {
-  background-color: #202124;
-}
+/* Eric Meyer's Reset Ends Here */
 
-/* PAGE TRANSITIONS */
+/* Page Transitions */
 
 .page{
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-}
-
-.fade-appear,
-.fade-enter {
-    opacity: 0;
-    z-index: 1;
-}
-.fade-appear-active,
-.fade-enter.fade-enter-active {
-    opacity: 1;
-    transition: opacity 150ms linear 100ms;
-}
-
-.fade-exit {
-    opacity: 1;
-}
-
-.fade-exit.fade-exit-active {
-    opacity: 0;
-    transition: opacity 100ms linear;
-}
-
-/* MODAL TRANSITIONS */
-
-.ReactModal__Overlay {
-  opacity: 0;
-  transition: opacity 250ms ease-in-out;
-}
-
-.ReactModal__Overlay--after-open{
-  opacity: 1;
-}
-
-.ReactModal__Overlay--before-close{
-  opacity: 0;
-}
-
-/* HIDE SCROLLBAR */
-
-html {
-  overflow: scroll;
-  overflow-x: hidden;
-}
-::-webkit-scrollbar {
-  display: none;
-}
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+  }
+  
+  .fade-appear,
+  .fade-enter {
+	  opacity: 0;
+	  z-index: 1;
+  }
+  .fade-appear-active,
+  .fade-enter.fade-enter-active {
+	  opacity: 1;
+	  transition: opacity 150ms linear 100ms;
+  }
+  
+  .fade-exit {
+	  opacity: 1;
+  }
+  
+  .fade-exit.fade-exit-active {
+	  opacity: 0;
+	  transition: opacity 100ms linear;
+  }
+  
+  /* Modal Transitions */
+  
+  .ReactModal__Overlay {
+	opacity: 0;
+	transition: opacity 250ms ease-in-out;
+  }
+  
+  .ReactModal__Overlay--after-open{
+	opacity: 1;
+  }
+  
+  .ReactModal__Overlay--before-close{
+	opacity: 0;
+  }
+  
+  /* Hide Scrollbar */
+  
+  html {
+	overflow: scroll;
+	overflow-x: hidden;
+  }
+  ::-webkit-scrollbar {
+	display: none;
+  }
