fixed modal arial label and other crud bugs

--- a/src/App.css
+++ b/src/App.css
@@ -51,12 +51,12 @@ table {
 
 /* Page Transitions */
 
-.page{
+/* .page{
 	position: absolute;
 	top: 0;
 	left: 0;
 	right: 0;
-  }
+  } */
   
   .fade-appear,
   .fade-enter {
